--- a/src/style.css
+++ b/src/style.css
@@ -152,3 +152,9 @@ content:url(/home/amir/restaurant/src/images/home.svg);
   justify-content: space-between;
   margin: 20px 20px 20px 20px;
 }
+
+.highlight {
+
+  background: linear-gradient(to right top,#47473f, #faf605);
+
+}
